# Momo-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: BUYER_README.md  GOTCHAS.md  GO_LIVE_RWANDA.md  SAFETY.md  flow-diagram.md
scripts/: check_secrets.sh  export_ledger.py  provision.py  reset_limits.py
src/momo_mcp/: __init__.py  app.py  audit.py  auth.py  config.py  guardrails.py  healthcheck.py  logging_conf.py  ratelimit.py  server.py  store.py
src/momo_mcp/providers/: __init__.py  airtel.py  base.py  mtn.py
tests/: fixtures.py  test_agent_safety.py  test_airtel.py  test_audit.py  test_auth.py  test_config.py  test_guardrails.py  test_live_sandbox.py  test_logging.py  test_mtn.py  test_payout.py  test_server.py  test_store.py
